src/test/deca/context/invalid/created/declVar/minus_boolean.deca
// Description :
// Opération unaire MINUS (-) sur un booleen
//
// Resultats :
// Error Contextuelle -> Ligne 8 : Unary Minus Operand should be boolean

{
    boolean b = - true;
}